package no.ntnu.idi.apollo69.controller;

import java.io.IOException;

import no.ntnu.idi.apollo69.Device;
import no.ntnu.idi.apollo69.model.MatchmakingModel;
import no.ntnu.idi.apollo69.navigation.Navigator;
import no.ntnu.idi.apollo69.navigation.ScreenType;
import no.ntnu.idi.apollo69.network.GameClient;
import no.ntnu.idi.apollo69.network.NetworkClientSingleton;
import no.ntnu.idi.apollo69framework.network_messages.DeviceInfo;
import no.ntnu.idi.apollo69framework.network_messages.PlayerInput;

public class MatchmakingController {

    private Navigator navigator;
    final private MatchmakingModel model;

    private GameClient gameClient;

    public MatchmakingController(Navigator navigator, MatchmakingModel matchmakingModel) {
        this.navigator = navigator;
        this.model = matchmakingModel;
        gameClient = NetworkClientSingleton.getInstance().getGameClient();
    }

    public void onShow() {
        startMatchmaking();
    }

    public void startMatchmaking() {
        Thread connectionThread = new Thread("Connection") {
            @Override
            public void run() {
                try {
                    model.setConnecting(true);
                    model.setMatchmakingDone(false);
                    gameClient.connectClient();
                } catch (IOException ex) {
                    model.setConnectingFailed(true);
                    System.err.println("Couldn't connect to the server. " + ex);
                }

                model.setConnecting(false);

                if (gameClient.isConnected()) {
                    DeviceInfo deviceInfo = new DeviceInfo(Device.DEVICE_ID);
                    gameClient.sendMessage(deviceInfo);

                    gameClient.sendMessage(new PlayerInput(Device.DEVICE_ID, 5, 5, false, false));
                }
            }
        };

        connectionThread.setDaemon(true);
        connectionThread.start();
    }

    public void cancelMatchmaking() {
        gameClient.disconnectClient();
        navigator.changeScreen(ScreenType.MAIN_MENU);
    }

    public void onMatchmakingDone() {
        navigator.changeScreen(ScreenType.LOBBY);
    }
}
