@startuml

title __CONTROLLER's Class Diagram__\n

  namespace no.ntnu.idi.apollo69 {
    namespace controller {
      class no.ntnu.idi.apollo69.controller.GameController {
          + GameController()
          + boostButtonPressed()
          + boostButtonReleased()
          + shootButtonPressed()
          + shootButtonReleased()
          + touchpadMoved()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace controller {
      class no.ntnu.idi.apollo69.controller.LobbyController {
          + LobbyController()
          + exitButtonPressed()
          + joinButtonPressed()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace controller {
      class no.ntnu.idi.apollo69.controller.MainMenuController {
          + MainMenuController()
          + playButtonPressed()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace controller {
      class no.ntnu.idi.apollo69.controller.MatchmakingController {
          + MatchmakingController()
          + cancelMatchmaking()
          + onMatchmakingDone()
          + onShow()
          + startMatchmaking()
      }
    }
  }
  

  no.ntnu.idi.apollo69.controller.GameController o-- no.ntnu.idi.apollo69.model.GameModel : model
  no.ntnu.idi.apollo69.controller.LobbyController o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.controller.LobbyController o-- no.ntnu.idi.apollo69.model.LobbyModel : lobbyModel
  no.ntnu.idi.apollo69.controller.LobbyController o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator
  no.ntnu.idi.apollo69.controller.MainMenuController o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator
  no.ntnu.idi.apollo69.controller.MatchmakingController o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.controller.MatchmakingController o-- no.ntnu.idi.apollo69.model.MatchmakingModel : model
  no.ntnu.idi.apollo69.controller.MatchmakingController o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
